--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "proj": "proj"
   },
   "scripts": {
-    "start": "http-server ./ -a 0.0.0.0 -p 8080"
+    "start": "http-server ./ -a localhost -p 8080"
   },
   "repository": {
     "type": "git",
